# homie

./: .env  Cargo.toml  homie.db
migrations/2023-07-04-144717_create_source/: down.sql  up.sql
migrations/2023-07-04-144725_create_timeseries/: down.sql  up.sql
src/: main.rs  schema.rs
src/power/: mod.rs  model.rs  routes.rs  service.rs
src/source/: mod.rs  model.rs  routes.rs  service.rs
