[package]
name = "homie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version = "2", features = ["sqlite", "chrono", "r2d2"]}
r2d2 = "0.8"
dotenvy = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2.0.25"
